--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
     "in-view": "^0.6.1",
     "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "pug-loader": "^2.4.0",
     "rc-tooltip": "^4.2.3",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.1",
@@ -74,8 +75,7 @@
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "react-animated-slider": "^2.0.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -92,6 +92,7 @@
     "exceljs": "^4.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "g": "^2.0.1",
     "helmet": "^4.1.1",
     "html2canvas": "^1.0.0-rc.7",
     "jimp": "^0.16.1",
