--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "react-animated-slider": "^2.0.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
