--- a/package.json
+++ b/package.json
@@ -62,20 +62,21 @@
     "pug-loader": "^2.4.0",
     "rc-tooltip": "^5.0.1",
     "react": "^17.0.1",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-select-country": "0.0.15",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^10.1.0",
+    "socket.io-client": "^3.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "react-animated-slider": "^2.0.0",
-    "socket.io-client": "^3.0.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -86,6 +87,7 @@
     "compression": "^1.7.4",
     "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "country-list": "^2.2.0",
     "docxtemplater": "^3.19.6",
     "docxtemplater-image-module-free": "^1.1.1",
     "dotenv": "^8.2.0",
