--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "autoLogin": true,
   "scripts": {
     "nodemon": "nodemon hiepphat.main.js --ignore node_modules/ --ignore public/ --ignore src/view/ --ignore webpack.config.js --ignore *.json",
-    "webpack-server": "webpack-dev-server --mode development --open --color",
+    "webpack-server": "webpack serve --mode development --open --color",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -74,8 +74,8 @@
     "sass-loader": "^10.1.0",
     "socket.io-client": "^3.0.1",
     "style-loader": "^2.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.8.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
