--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "redis": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^3.0.1",
-    "xlsx": "^0.16.8"
+    "xlsx": "^0.16.8",
+    "yarn": "^1.22.10"
   }
 }
