Cập nhật webpack caching

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "from": "thanhtung@hcmut.edu.vn",
     "password": "C0nc0b3b3",
     "cc": [
-      "hithanhtung@gmail.com"
+      "quangsang@hcmut.edu.vn"
     ]
   },
   "default": {
