--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "file-saver": "^2.0.5",
     "helmet": "^4.2.0",
     "html2canvas": "^1.0.0-rc.7",
     "jimp": "^0.16.1",
