--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "hiepphat.main.js",
   "dbName": "hiepphat",
   "port": 5090,
-  "sessionRedisStore": false,
   "rootUrl": "https://hiepphat.bktphcm.net",
   "autoLogin": true,
   "scripts": {
@@ -56,7 +55,6 @@
     "css-loader": "^5.0.1",
     "dateformat": "^3.0.3",
     "file-loader": "^6.2.0",
-    "url-loader": "^4.1.1",
     "html-webpack-plugin": "^4.5.0",
     "in-view": "^0.6.1",
     "mini-css-extract-plugin": "^1.3.1",
@@ -77,6 +75,7 @@
     "sass-loader": "^10.1.0",
     "socket.io-client": "^3.0.1",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
@@ -119,6 +118,7 @@
     "redis": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^3.0.1",
+    "socket.io-redis": "^6.0.1",
     "xlsx": "^0.16.8"
   }
 }
