--- a/asset/hpo.edu.vn.conf
+++ b/asset/hpo.edu.vn.conf
@@ -1,27 +1,30 @@
-<VirtualHost *:80>
-	ServerName hpo.edu.vn
-	Redirect permanent / https://hpo.edu.vn/
-</VirtualHost>
+server {
+    listen 443 ssl;
+    server_name hpo.edu.vn www.hpo.edu.vn;
+    ssl_certificate     /etc/ssl/hpo_certificate.crt;
+    ssl_certificate_key /etc/ssl/hpo_private.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
 
-<VirtualHost *:443>
-	ServerAdmin thanhtung@hcmut.edu.vn
-	ServerName hpo.edu.vn
-	ServerAlias www.hpo.edu.vn
+    location / {
+        root /var/www/hiep-phat;
+        index index.html index.htm;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
 
-	SSLEngine on
-	SSLProxyEngine on
-	SSLProxyVerify none
-	SSLProxyCheckPeerCN off
-	SSLProxyCheckPeerName off
-	SSLProxyCheckPeerExpire off
-	SSLCertificateFile /etc/ssl/hpo_certificate.crt
-	SSLCertificateKeyFile /etc/ssl/hpo_private.key
-	SSLCertificateChainFile /etc/ssl/hpo_ca_bundle.crt
+        proxy_http_version 1.1;
+        proxy_pass https://localhost:5090;
 
-	DocumentRoot /var/www/hiepphat
+        # enable WebSockets
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+	    proxy_set_header Host $host;
+	    proxy_cache_bypass $http_upgrade;
+    }
+}
 
-	<Location />
-		ProxyPass https://localhost:5090/
-		ProxyPassReverse https://localhost:5090/
-	</Location>
-</VirtualHost>
+server {
+    listen 80;
+    server_name hpo.edu.vn www.hpo.edu.vn;
+    return 301 https://hpo.edu.vn;
+}
