--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hiep-phat",
-  "version": "1.0.34",
+  "version": "1.0.36",
   "title": "Hiep Phat Website",
   "description": "Trung tam dao tao lai xe Hiep Phat",
   "main": "hiepphat.main.js",
@@ -76,9 +76,10 @@
     "sass-loader": "^10.1.0",
     "socket.io-client": "^4.0.1",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
@@ -94,7 +95,6 @@
     "decompress-zip": "^0.3.3",
     "docxtemplater": "^3.21.1",
     "docxtemplater-image-module-free": "^1.1.1",
-    "dotenv": "^8.2.0",
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -102,7 +102,6 @@
     "helmet": "^4.2.0",
     "html2canvas": "^1.0.0-rc.7",
     "jimp": "^0.16.1",
-    "jquery": "^3.5.1",
     "json-beautify": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.0",
@@ -112,7 +111,6 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.16",
     "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "pizzip": "^3.0.6",
     "pug": "^3.0.0",
