--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react": "^17.0.1",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.1",
+    "react-input-mask": "^2.0.4",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
