--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "react-datetime": "^3.0.4",
     "react-select": "^3.1.0",
     "react-swipeable-views": "^0.13.9",
+    "react-youtube": "^7.13.1",
     "redis": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^4.0.1",
