--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "file-saver": "^2.0.5",
     "helmet": "^4.2.0",
     "html2canvas": "^1.0.0-rc.7",
+    "husky": "^6.0.0",
     "jimp": "^0.16.1",
     "json-beautify": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
