--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,7 @@
         "CKEDITOR": "writable",
         "Chart": "writable"
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
-    ],
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -21,38 +18,23 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
+    "plugins": ["react"],
     "parser": "babel-eslint",
-    "ignorePatterns": [
-        "view/js/*",
-        "public/*",
-        "asset/*"
-    ],
+    "ignorePatterns": ["view/js/*", "public/*", "asset/*"],
     "rules": {
         "no-constant-condition": "off",
-        "no-unused-vars": [
-            "error"
-        ],
-        "indent": [
-            "off"
-        ],
-        "no-var": [
-            "error"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
+        "no-unused-vars": ["error"],
+        "indent": ["off"],
+        "no-var": ["error"],
+        "quotes": ["error", "single"],
+        "semi": ["error", "always"],
         "react/prop-types": "off",
-        "react/display-name": [
-            0
-        ],
+        "react/display-name": [0],
         "no-useless-escape": "off"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
