--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
         "semi": ["error", "always"],
         "react/prop-types": "off",
         "react/display-name": [0],
-        "no-useless-escape": "off"
+        "no-useless-escape": "off",
+        "no-prototype-builtins": "off"
     },
     "settings": {
         "react": {
