--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
     },
     "plugins": ["react"],
     "parser": "babel-eslint",
-    "ignorePatterns": ["view/js/*", "public/*", "asset/*"],
+    "ignorePatterns": ["view/js/*", "public/*", "asset/*", "asset/**"],
     "rules": {
         "no-constant-condition": "off",
         "no-unused-vars": ["error"],
