--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "title": "Hiep Phat Website",
   "description": "Trung tam dao tao lai xe Hiep Phat",
   "main": "hiepphat.main.js",
-  "dbName": "hiepphat",
   "port": 5090,
   "rootUrl": "https://hpo.edu.vn",
-  "autoLogin": true,
+  "redisDB": {
+    "host": "localhost",
+    "port": 6379
+  },
+  "mongoDB": {
+    "dbName": "hiepphat",
+    "host": "localhost",
+    "port": 27017
+  },
   "scripts": {
     "nodemon": "nodemon hiepphat.main.js --ignore node_modules/ --ignore public/ --ignore src/view/ --ignore webpack.config.js --ignore *.json",
     "webpack-server": "webpack serve --mode development --color",
