--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "pizzip": "^3.0.6",
     "pug": "^3.0.0",
     "react-datetime": "^3.0.4",
+    "react-qr-code": "^2.0.3",
     "react-select": "^3.1.0",
     "react-swipeable-views": "^0.13.9",
     "react-youtube": "^7.13.1",
