--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "face-api.js": "^0.22.2",
     "file-saver": "^2.0.5",
     "helmet": "^4.2.0",
     "html2canvas": "^1.0.0-rc.7",
@@ -134,9 +135,11 @@
     "pizzip": "^3.0.6",
     "pug": "^3.0.0",
     "react-datetime": "^3.0.4",
+    "react-player": "^2.9.0",
     "react-qr-code": "^2.0.3",
     "react-select": "^3.1.0",
     "react-swipeable-views": "^0.13.9",
+    "react-webcam": "^6.0.0",
     "react-youtube": "^7.13.1",
     "redis": "^3.0.2",
     "serve-favicon": "^2.5.0",
