--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "basic-auth": "^2.0.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
+    "canvas": "^2.8.0",
     "compression": "^1.7.4",
     "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
