--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hiep-phat",
-  "version": "1.0.119",
+  "version": "1.0.120",
   "title": "Hiep Phat Website",
   "description": "Trung tam dao tao lai xe Hiep Phat",
   "main": "hiepphat.main.js",
@@ -55,22 +55,22 @@
   "author": "Nguyen Thanh Tung",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.5",
     "@webpack-cli/serve": "^1.1.0",
     "acorn": "^8.0.4",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.1",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "dateformat": "^3.0.3",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "in-view": "^0.6.1",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^6.0.0",
+    "node-sass": "^7.0.1",
     "nodemon": "^2.0.6",
     "pug-loader": "^2.4.0",
     "rc-tooltip": "^5.0.1",
@@ -85,21 +85,21 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^11.1.0",
-    "socket.io-client": "^4.0.1",
-    "style-loader": "^2.0.0",
+    "sass-loader": "^12.4.0",
+    "socket.io-client": "^4.4.1",
+    "style-loader": "^3.3.1",
     "svg-url-loader": "^7.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "archiver": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "basic-auth": "^2.0.1",
-    "bcrypt-nodejs": "^0.0.3",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "canvas": "^2.8.0",
     "compression": "^1.7.4",
@@ -126,7 +126,7 @@
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
-    "mongoose": "^5.10.14",
+    "mongoose": "^6.1.6",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
     "node-schedule": "^1.3.2",
@@ -143,6 +143,7 @@
     "react-webcam": "^6.0.0",
     "react-youtube": "^7.13.1",
     "redis": "^3.0.2",
+    "sass": "^1.47.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^4.0.1",
     "socket.io-parser": "^4.0.4",
