--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "archiver": "^5.0.2",
+    "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.0.0",
@@ -126,7 +127,7 @@
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
-    "mongoose": "^6.1.6",
+    "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
     "node-schedule": "^1.3.2",
