--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "rc-tooltip": "^5.0.1",
     "react": "^17.0.1",
     "react-animated-slider": "^2.0.0",
+    "react-number-format": "^4.9.1",
     "react-dom": "^17.0.1",
     "react-input-mask": "^2.0.4",
     "react-loadable": "^5.5.0",
