--- a/package.json
+++ b/package.json
@@ -76,10 +76,10 @@
     "rc-tooltip": "^5.0.1",
     "react": "^17.0.1",
     "react-animated-slider": "^2.0.0",
-    "react-number-format": "^4.9.1",
     "react-dom": "^17.0.1",
     "react-input-mask": "^2.0.4",
     "react-loadable": "^5.5.0",
+    "react-number-format": "^4.9.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-select-country": "0.0.15",
@@ -137,6 +137,7 @@
     "passport-google-oauth": "^2.0.0",
     "pizzip": "^3.0.6",
     "pug": "^3.0.0",
+    "react-connect-elements": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-datetime": "^3.0.4",
     "react-player": "^2.9.0",
