--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "multiparty": "^4.2.2",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.16",
+    "number-to-text-vietnamese": "^1.0.9",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "pizzip": "^3.0.6",
