--- a/package.json
+++ b/package.json
@@ -93,11 +93,11 @@
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "canvas": "^2.8.0",
     "compression": "^1.7.4",
     "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "country-list": "^2.2.0",
-    "canvas": "^2.8.0",
     "dayjs": "^1.10.7",
     "decompress-zip": "^0.3.3",
     "docxtemplater": "^3.21.1",
@@ -131,6 +131,7 @@
     "react-connect-elements": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-datetime": "^3.0.4",
+    "react-pdf": "^5.7.2",
     "react-player": "^2.9.0",
     "react-qr-code": "^2.0.3",
     "react-select": "^3.1.0",
