--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "nodemon": "^2.0.6",
     "pug-loader": "^2.4.0",
     "rc-tooltip": "^5.0.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-animated-slider": "^2.0.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
     "react-loadable": "^5.5.0",
     "react-number-format": "^4.9.1",
@@ -111,6 +111,7 @@
     "jimp": "^0.16.1",
     "json-beautify": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.8.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
@@ -127,6 +128,7 @@
     "react-connect-elements": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-datetime": "^3.0.4",
+    "react-leaflet": "^4.0.0",
     "react-messenger-customer-chat": "^0.8.0",
     "react-pdf": "^5.7.2",
     "react-player": "^2.9.0",
